# DirectX12FromScratch

./: .gitmodules  CMakeLists.txt  DirectX12FromScratch.sln
DirectX12FromScratch/: Application.cpp  Application.h  CMakeLists.txt  Config.h  D3D12Device.cpp  D3D12Device.h  D3D12RenderSystem.cpp  D3D12RenderSystem.h  D3D12RenderWindow.cpp  D3D12RenderWindow.h  DirectX12FromScratch.vcxproj  DirectX12FromScratch.vcxproj.filters  Event_SFML.h  Graphics_DX12.cpp  IWindow.h  MainApplication.cpp  MainApplication.h  RenderSystem.cpp  RenderTarget.cpp  Root.cpp  Root.h  Window.h  Window_SFML.cpp  Window_SFML.h  main.cpp
DirectX12FromScratch/Assets/: Cube.ntm  cello.txt  shaders.hlsl  train.txt
DirectX12FromScratch/Assets/models/: ant.txt  bomberman.txt  cube.mtl  cube.txt
DirectX12FromScratch/Assets/models/Character_A1016A460/: glow.tga  shadow.mtl  specular.tga
DirectX12FromScratch/Assets/models/majora/: Majora.mtl  Majora.txt
DirectX12FromScratch/Assets/shaders/: camera.hlsl  lights.hlsl  material.hlsl  model.hlsl  ps.hlsl  psinput.hlsl  shaders.hlsl  vs.hlsl
DirectX12FromScratch/include/: Event.h  Graphics_DX12.h  IGraphics.h  Keyboard.h  MainApplication.h  Mouse.h  Vector.h  Window.h
DirectX12FromScratch/include/ImageLoader/: AImageLoader.h  BmpImageLoader.h  IImageLoader.h  ImageLoader.h  JpgImageLoader.h  PngImageloader.h
DirectX12FromScratch/include/MiniEngine/: Application.h  BasicSceneManager.h  Camera.h  Clock.h  CommandList.h  CommandQueue.h  ConstantBuffer.h  DirectionalLight.h  Fence.h  Geometry.h  GraphicPipeline.h  HLSLShader.h  Light.h  Material.h  Matrix.h  Mesh.h  Model.h  MovableObject.h  PointLight.h  Quaternion.h  RenderSystem.h  RenderTarget.h  RenderWindow.h  RenderableMesh.h  RenderableModel.h  RenderableObject.h  Root.h  SceneManager.h  SceneNode.h  Shader.h  SpotLight.h  SysClock.h  Texture.h  Time.h  Vector.h  Viewport.h
DirectX12FromScratch/include/MiniEngine/D3D12/: D3D12CommandList.h  D3D12CommandQueue.h  D3D12ConstantBuffer.h  D3D12DescriptorHeap.h  D3D12Device.h  D3D12Fence.h  D3D12GraphicPipeline.h  D3D12HLSLShader.h  D3D12IndexBuffer.h  D3D12Material.h  D3D12RenderSystem.h  D3D12RenderTarget.h  D3D12RenderWindow.h  D3D12RenderableMesh.h  D3D12RenderableModel.h  D3D12RootSignature.h  D3D12Texture.h  D3D12VertexBuffer.h
DirectX12FromScratch/include/MiniEngine/Helper/: d3dx12.h
DirectX12FromScratch/src/: DynamicLibrary.cpp  MainApplication.cpp  Mouse.cpp  main.cpp
DirectX12FromScratch/src/ImageLoader/: AImageLoader.cpp  BmpImageLoader.cpp  IImageLoader.cpp  ImageLoader.cpp  JpgImageLoader.cpp  PngImageLoader.cpp
DirectX12FromScratch/src/MiniEngine/: Application.cpp  BasicSceneManager.cpp  Camera.cpp  Clock.cpp  CommandList.cpp  CommandQueue.cpp  ConstantBuffer.cpp  DirectionalLight.cpp  Fence.cpp  GraphicPipeline.cpp  HLSLShader.cpp  Light.cpp  Material.cpp  Mesh.cpp  Model.cpp  MovableObject.cpp  PointLight.cpp  RenderSystem.cpp  RenderTarget.cpp  RenderWindow.cpp  RenderableMesh.cpp  RenderableModel.cpp  Root.cpp  SceneManager.cpp  SceneNode.cpp  Shader.cpp  SpotLight.cpp  SysClock.cpp  Texture.cpp  Time.cpp  Viewport.cpp
DirectX12FromScratch/src/MiniEngine/D3D12/: D3D12CommandList.cpp  D3D12CommandQueue.cpp  D3D12ConstantBuffer.cpp  D3D12DescriptorHeap.cpp  D3D12Device.cpp  D3D12Fence.cpp  D3D12GraphicPipeline.cpp  D3D12HLSLShader.cpp  D3D12IndexBuffer.cpp  D3D12Material.cpp  D3D12RenderSystem.cpp  D3D12RenderTarget.cpp  D3D12RenderWindow.cpp  D3D12RenderableMesh.cpp  D3D12RenderableModel.cpp  D3D12RootSignature.cpp  D3D12Texture.cpp  D3D12VertexBuffer.cpp
ImageMagick-6.9.3-Q16/: configure.xml
ImageMagick-6.9.3-Q16/Magick++_Demo/: Magick++_Demo.sln  button.vcxproj  button.vcxproj.filters  demo.vcxproj  demo.vcxproj.filters  detrans.vcxproj  detrans.vcxproj.filters  flip.vcxproj  flip.vcxproj.filters  gravity.vcxproj  gravity.vcxproj.filters  piddle.vcxproj  piddle.vcxproj.filters  shapes.vcxproj  shapes.vcxproj.filters  zoom.vcxproj  zoom.vcxproj.filters
ImageMagick-6.9.3-Q16/include/magick/: magick-baseconfig.h  version.h
ImageMagick-6.9.3-Q16/lib/: CORE_RL_Magick++_.lib  CORE_RL_magick_.lib  CORE_RL_wand_.lib
SFML-2.3.2/doc/: sfml.chm
SFML-2.3.2/lib/: sfml-audio-d.lib  sfml-audio.lib  sfml-graphics-d.lib  sfml-graphics.lib  sfml-main-d.lib  sfml-main.lib  sfml-network-d.lib  sfml-network-s.lib  sfml-network.lib  sfml-system-d.lib  sfml-system.lib  sfml-window-d.lib  sfml-window.lib
SOUNDENGINE_YSE/: SOUNDENGINE_YSE.vcxproj  SOUNDENGINE_YSE.vcxproj.filters  Sound.cpp  Sound.hh  SoundEngine.cpp  SoundEngine.hh  YSElog.txt  main.cpp
WINDOW_SFML/: CMakeLists.txt  DynamicLibrary.h  IWindow.h  Keyboard_SFML.cpp  Keyboard_SFML.h  Mouse_SFML.cpp  Mouse_SFML.h  WINDOW_SFML.vcxproj  WINDOW_SFML.vcxproj.filters  Window_SFML.cpp  Window_SFML.h  main.cpp
WINDOW_WIN32/: IWindow.h  WINDOW_WIN32.vcxproj  WINDOW_WIN32.vcxproj.filters  Window_Win32.cpp  Window_Win32.h  main.cpp
cmake_modules/: Findassimp.cmake
yse_soundengine/include/channel/: channel.hpp
yse_soundengine/lib/dll/: libyse32.exp  libyse32.lib  libyse64.exp  libyse64.lib
