CMAKE_MINIMUM_REQUIRED(VERSION 3.4)
#Because target platform version is only set on cmake v3.4+ (required for directx 12 headers/libs)
PROJECT(DirectX12FromScratch)

SET(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake_modules" ${CMAKE_MODULE_PATH})
SET(OUTPUT_DIR ${PROJECT_BINARY_DIR}/bin)

find_package(assimp REQUIRED)

FILE(GLOB_RECURSE SOURCES_D3D12_ENGINE ./DirectX12FromScratch/src/*.cpp)

FILE(GLOB_RECURSE HEADERS_D3D12_ENGINE ./DirectX12FromScratch/include/*.h)

ADD_EXECUTABLE(D3D12Engine ${SOURCES_D3D12_ENGINE} ${HEADERS_D3D12_ENGINE})

TARGET_LINK_LIBRARIES(D3D12Engine ${ASSIMP_LIBRARY} d3dcompiler dxgi d3d12)

TARGET_INCLUDE_DIRECTORIES(D3D12Engine PUBLIC ${ASSIMP_INCLUDE_DIR})
TARGET_INCLUDE_DIRECTORIES(D3D12Engine PUBLIC ./DirectX12FromScratch/include/)

set_property(TARGET D3D12Engine PROPERTY RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_DIR})
set_property(TARGET D3D12Engine PROPERTY LIBRARY_OUTPUT_DIRECTORY ${OUTPUT_DIR})
set_property(TARGET D3D12Engine PROPERTY ARCHIVE_OUTPUT_DIRECTORY ${OUTPUT_DIR})
foreach(OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES})
  string(TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG)
  set_property(TARGET D3D12Engine PROPERTY RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${OUTPUT_DIR})
  set_property(TARGET D3D12Engine PROPERTY LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${OUTPUT_DIR})
  set_property(TARGET D3D12Engine PROPERTY ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${OUTPUT_DIR})
endforeach(OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES)

install(DIRECTORY ${PROJECT_SOURCE_DIR}/DirectX12FromScratch/Assets DESTINATION ${OUTPUT_DIR})
if (MSVC)
  install(CODE "include(BundleUtilities)
          FIXUP_BUNDLE(\"${PROJECT_BINARY_DIR}/bin/D3D12Engine.exe\" \"\" \"${ASSIMP_LIBRARY_DIR}\")")
endif ()