CMAKE_MINIMUM_REQUIRED(VERSION 3.4)
#Because target platform version is only set on cmake v3.4+ (required for directx 12 headers/libs)
PROJECT(DirectX12FromScratch)

cmake_policy(SET CMP0026 OLD)

LIST(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake_modules")
LIST(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/rpavlik_cmake_modules")
include(CreateLaunchers)

find_package(assimp REQUIRED)
if (ASSIMP_FOUND)
MESSAGE(STATUS "Assimp found")
add_library(assimp UNKNOWN IMPORTED)
set_property(TARGET assimp PROPERTY INTERFACE_INCLUDE_DIRECTORIES ${ASSIMP_INCLUDE_DIR})
set_property(TARGET assimp PROPERTY IMPORTED_LOCATION_RELEASE ${ASSIMP_LIBRARY_RELEASE})
set_property(TARGET assimp PROPERTY IMPORTED_LOCATION_DEBUG ${ASSIMP_LIBRARY_DEBUG})
else()
MESSAGE(FATAL_ERROR "Assimp not found, please set ASSIMP_ROOT_DIR and check lib32/lib64 contents")
endif()

find_package(SFML 2.3 COMPONENTS system window REQUIRED)
if (SFML_FOUND)
MESSAGE(STATUS "SFML with version >= 2.3 found")
get_filename_component(SFML_BINARY_DIR "${SFML_INCLUDE_DIR}\\..\\bin" ABSOLUTE)
add_library(sfml INTERFACE IMPORTED)
set_property(TARGET sfml PROPERTY INTERFACE_INCLUDE_DIRECTORIES ${SFML_INCLUDE_DIR})
add_library(sfml-window UNKNOWN IMPORTED)
set_property(TARGET sfml-window PROPERTY IMPORTED_LOCATION_RELEASE ${SFML_WINDOW_LIBRARY_RELEASE})
set_property(TARGET sfml-window PROPERTY IMPORTED_LOCATION_DEBUG ${SFML_WINDOW_LIBRARY_DEBUG})
add_library(sfml-system UNKNOWN IMPORTED)
set_property(TARGET sfml-system PROPERTY IMPORTED_LOCATION_RELEASE ${SFML_SYSTEM_LIBRARY_RELEASE})
set_property(TARGET sfml-system PROPERTY IMPORTED_LOCATION_DEBUG ${SFML_SYSTEM_LIBRARY_DEBUG})
else()
MESSAGE(FATAL_ERROR "SFML not found, please set SFML_ROOT")
endif()

add_subdirectory(DirectX12FromScratch)
add_subdirectory(WINDOW_SFML)