SET(OUTPUT_DIR ${PROJECT_BINARY_DIR}/bin)

FILE(GLOB SOURCES_WINDOW_SFML ./*.cpp)

FILE(GLOB HEADERS_WINDOW_SFML ./*.h)

ADD_LIBRARY(WINDOW_SFML MODULE ${SOURCES_WINDOW_SFML} ${HEADERS_WINDOW_SFML})

TARGET_LINK_LIBRARIES(WINDOW_SFML sfml sfml-window sfml-system)

TARGET_INCLUDE_DIRECTORIES(WINDOW_SFML PUBLIC ./)
TARGET_INCLUDE_DIRECTORIES(WINDOW_SFML PUBLIC ${PROJECT_SOURCE_DIR}/DirectX12FromScratch/include/)

set_property(TARGET WINDOW_SFML PROPERTY RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_DIR})
set_property(TARGET WINDOW_SFML PROPERTY LIBRARY_OUTPUT_DIRECTORY ${OUTPUT_DIR})
set_property(TARGET WINDOW_SFML PROPERTY ARCHIVE_OUTPUT_DIRECTORY ${OUTPUT_DIR})
foreach(OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES})
  string(TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG)
  set_property(TARGET WINDOW_SFML PROPERTY RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${OUTPUT_DIR})
  set_property(TARGET WINDOW_SFML PROPERTY LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${OUTPUT_DIR})
  set_property(TARGET WINDOW_SFML PROPERTY ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${OUTPUT_DIR})
endforeach(OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES)